<resources>
    <string name="app_name">OutSport</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">984609414964813</string>
    <string name="title_activity_hello_facebook_broadcast_receiver">HelloFacebookBroadcastReceiver
    </string>
    <string name="title_activity_hello_facebook_sample">HelloFacebookSampleActivity</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="title_activity_login_face_book">LoginFaceBook</string>
    <string name="title_activity_access_token">AccessTokenActivity</string>
    <string name="title_activity_intent_util">IntentUtil</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello">Hello World, MenuExampleActivity!</string>
    <string name="exitOption">Exit</string>
    <string name="aboutOption">About</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>


    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="logout">Logout</string>
    <string name="loginText">Please login with your Google Account</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>


    <!-- Actividades -->
    <string name="title_activity_update">Editar Meta</string>
    <string name="title_activity_detail">Detalle</string>
    <string name="title_activity_insert">Insertar Nueva Meta</string>

    <!-- Action Buttons -->
    <string name="action_delete">Borrar</string>
    <string name="action_discard">Descartar</string>
    <string name="action_edit">Editar</string>
    <string name="action_done">Guardar</string>

    <!-- Categorías -->
    <string-array name="entradas_categoria">
        <item>Salud</item>
        <item>Finanzas</item>
        <item>Espiritual</item>
        <item>Profesional</item>
        <item>Material</item>
    </string-array>

    <!-- Prioridades -->
    <string-array name="entradas_prioridad">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

    <!-- Diálogos -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_discard_msg">¿Descartar Cambios?</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_delete_msg">Se eliminará la meta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- string samvieja -->
    <string name="Region">Seleccione Region</string>
    <string name="Ciudad">Seleccione Ciudad</string>
    <string name="region">Seleccione region</string>
    <string name="ciudad">seleccione ciudad</string>
    <string name="fecha">Elige tu fecha</string>
    <string name="buscar_ruta">Buscar ruta</string>
    <string name="categoria">Elige una categoria</string>
    <string name="texto_evento">Eventos</string>
    <string name="title_activity_activity_map">Eventos Cercanos</string>
    <string name="title_activity_activity_maps">Map</string>
</resources>
