<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/spinner5" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/Ciudad"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:background="@drawable/spinner5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/region"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ciudad"
        android:id="@+id/textView2"
        android:layout_below="@+id/spinner1"
        android:textSize="22sp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="-8dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:id="@+id/textView3"
        android:layout_below="@+id/spinner2"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="-8dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar_ruta"
        android:textAlignment="center"
        android:id="@+id/button"
        android:background="#01cb99"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="120dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-2dp"
        android:background="@drawable/spinner5" />
</RelativeLayout>
